--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "gro",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "18.2.3",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.4.0",
-    "next": "13.4.0",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  }
+    "name": "gro",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@headlessui/react": "^1.7.14",
+        "@heroicons/react": "^2.0.17",
+        "@supabase/supabase-js": "^2.21.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@types/node": "18.16.3",
+        "@types/react": "18.2.5",
+        "@types/react-dom": "18.2.3",
+        "autoprefixer": "10.4.14",
+        "eslint": "8.39.0",
+        "eslint-config-next": "13.4.0",
+        "next": "13.4.0",
+        "postcss": "8.4.23",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "tailwindcss": "3.3.2",
+        "typescript": "5.0.4"
+    },
+    "devDependencies": {
+        "prettier": "2.8.8"
+    }
 }
