--- a/package.json
+++ b/package.json
@@ -1,32 +1,44 @@
 {
-    "name": "gro",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@headlessui/react": "^1.7.14",
-        "@heroicons/react": "^2.0.17",
-        "@supabase/supabase-js": "^2.21.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@types/node": "18.16.3",
-        "@types/react": "18.2.5",
-        "@types/react-dom": "18.2.3",
-        "autoprefixer": "10.4.14",
-        "eslint": "8.39.0",
-        "eslint-config-next": "13.4.0",
-        "next": "13.4.0",
-        "postcss": "8.4.23",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "tailwindcss": "3.3.2",
-        "typescript": "5.0.4"
-    },
-    "devDependencies": {
-        "prettier": "2.8.8"
-    }
+  "name": "gro",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint --config .eslintrc.js",
+    "lint:all": "eslint --config .eslintrc.js .",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "format:all": "prettier --config .prettierrc --write ."
+  },
+  "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
+    "@supabase/supabase-js": "^2.21.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.5",
+    "@types/react-dom": "18.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.4.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "next": "13.4.0",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
+    "@commitlint/cz-commitlint": "^17.5.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "lefthook": "^1.3.12",
+    "prettier": "2.8.8"
+  }
 }
