--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "13.4.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "framer-motion": "^10.12.16",
     "next": "13.4.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
