--- a/lefthook.yml
+++ b/lefthook.yml
@@ -7,6 +7,8 @@ pre-commit:
   commands:
     # test:
     #   run: npm run test
+    build:
+      run: npm run build
     lint:
       run: npm run lint:all
     format:
