--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
     "@commitlint/cz-commitlint": "^17.5.0",
+    "encoding": "^0.1.13",
     "eslint-plugin-unused-imports": "^2.0.0",
     "lefthook": "^1.3.12",
     "prettier": "2.8.8"
