--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "recharts": "^2.6.2",
+    "resend": "^1.0.0",
     "swr": "^2.1.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
