--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
-    "@hookform/resolvers": "^3.1.0",
+    "@hookform/resolvers": "3.3.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -38,19 +39,19 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "framer-motion": "^10.12.16",
-    "next": "13.4.10",
+    "next": "13.5.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "7.47.0",
     "recharts": "^2.6.2",
     "resend": "^1.0.0",
     "swr": "^2.1.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6",
-    "zod": "^3.21.4"
+    "typescript": "5.2.2",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
